# study_and_work_counselor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflow/: ci.yml
.github/workflows/: ci.yml  ci_linting_tests.yml
app/: controls.py  helpers.py  layout.py  stages.py  streamlit_app.py
exploration/: Untitled-1.ipynb
src/: config.py  main.py
src/agent/: graph.py  models.py  parsing.py  prompts.py  state.py  tasks.py  tools.py
tests/: conftest.py  test_nodes.py  test_profile.py  test_tasks.py  test_tasks_integration.py  test_tools.py
