[tool.poetry]
name = "study_and_work_counselor"
version = "0.1.0"
description = ""
authors = ["Martin Hallberg <88983960+MartinJHallberg@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
