[tool.poetry]
name = "study_and_work_counselor"
version = "0.1.0"
description = ""
authors = ["Martin Hallberg <88983960+MartinJHallberg@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
langgraph = "^0.6.7"
langchain-community = "^0.3.29"
langchain-openai = "^0.3.33"
jupyter = "^1.1.1"
pyppeteer = "^2.0.0"
langchain-core = "^0.3.76"
pydantic = "^2.11.9"
pytest = "^8.4.2"
ruff = "^0.13.2"
streamlit = "^1.38.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
